Flex fix for footer whitespace gap on small viewport

--- a/app/assets/stylesheets/charon.scss
+++ b/app/assets/stylesheets/charon.scss
@@ -1,3 +1,22 @@
+html {
+  position: relative;
+  min-height: 100%;
+}
+
+body {
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+}
+
+main {
+  flex-grow: 1;
+}
+
+footer {
+  flex-grow: 0;
+}
+
 .footer {
   background-color: #385775;
   color: $light;
